syntax = "proto3";

package configproto;

message HealthReq {
	string clientName = 1;
}

message HealthResp {
	int32 code = 1;
	string serverName = 2;
	int64 version = 3;
	string message = 4;
    bytes value = 5; // json
}

message FindOneReq {
	string name = 1;
	int64 version = 2; // 0 is last info
}

message FindOneResp {
	int64 id = 1;
	int64 version =2;
	string  message = 3;
	bytes value = 4; // json
}

message UpdateReq {
	string name = 1;
	int64 version = 2;
    bytes value = 3; // json
}

message UpdateResp {
	int32 code = 1;
	string message = 2;
    bytes value = 3; // json
}

message ListReq {
	string name = 1;
	bytes value = 2; // json
}

message ListResp {
	int32 code = 1;
	string message = 2;
    bytes value = 3; // json
}

service ConfigService {
	rpc Health(HealthReq) returns (HealthResp);
	rpc FindOne(FindOneReq) returns (FindOneResp);
	rpc Update(UpdateReq) returns (UpdateResp);
	rpc List(ListReq) returns (ListResp);
}
